# django-blog-project

./: pyproject.toml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
templates/: base.html  blog_delete.html  blog_detail.html  blog_edit.html  blog_list.html  blog_new.html  signup.html
templates/registration/: login.html
